# reversi

./: .gitignore  Cargo.toml  Dockerfile  app.yaml  source-context.json  source-contexts.json
src/: .gitignore  main.go  main.rs
src/api/: .gitignore  deploy.sh  deployj.sh  friend.js  game.js  gs.js  invite.js  logged_in.js  login.js  logout.js  package.json  play.js  refresh_login.js  reversi.js  reversi.spec.js  serverless.env.yml.old  serverless.yml  user.js
src/api/.gits/: gs.js  index.js
src/api/spec/: reversi.spec.js
src/logged_in/: .gitignore  index.js  logged_in.js  package.json  serverless.yml
src/login/: .gitignore  index.js  package.json  serverless.yml
src/play/: .gitignore  handler.js  index.js  package.json  serverless.yml
src/pubnub_example/: .gitignore  index.js  package.json  pubnub_example.js
src/pubnub_example2/: .gitignore  index.js  package.json  pubnub_example.js
src/refresh_login/: .gitignore  index.js  package.json
src/serverless-test/: serverless.yml
static/: .gitignore  .yo-rc.json  package.json
static/conf/: karma-auto.conf.js  karma.conf.js  webpack-dist.conf.js  webpack.conf.js
static/src/: index.html  index.less  index.ts  routes.ts
static/src/app/: dashboard.html  dashboard.ts  header.html  header.less  header.ts  hello.ts  main.html  main.less  main.spec.ts  main.ts  play.html  play.less  play.ts  player.html  player.ts  popup.html  popup.less  popup.ts  reversi.service.spec.ts  reversi.service.ts  websocket.service.ts
