[package]
name = "reversi"
version = "0.1.0"
authors = ["Daphne <machinegirl@eternalvoid.net>", "Jeremy <jeremy@jeremycarter.ca>"]

[dependencies]
iron = "0.4.0"
mount = { git="https://github.com/iron/mount.git", branch="master" }
staticfile = { git="https://github.com/iron/staticfile.git", version="0.3.0" }
router = "*"
websocket = "0.17.1"
serde = "0.8"
serde_json = "0.8"
serde_macros = "0.8"
rustc-serialize = "0.3"
jwt = "0.4"
openssl = "0.7"
inth-oauth2 = "0.10"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"
